--- a/Projektdokumentation/Projektdokumentation-Zeitmessung.html
+++ b/Projektdokumentation/Projektdokumentation-Zeitmessung.html
@@ -34,7 +34,7 @@
 </head>
 
 <body>
-    <div id="doc" class="markdown-body container-fluid comment-enabled" style="position: relative;"><h1 id="Projektdokumentation-Zeitmessung"><a class="anchor hidden-xs" href="#Projektdokumentation-Zeitmessung" title="Projektdokumentation-Zeitmessung"><span class="octicon octicon-link"></span></a>Projektdokumentation: Zeitmessung</h1><h2 id="Einführung"><a class="anchor hidden-xs" href="#Einführung" title="Einführung"><span class="octicon octicon-link"></span></a>Einführung</h2><p>Dieses Projekt wurde von der gymnasialen Oberstufe des <a href="http://www.bkt-luedenscheid.de" target="_blank" rel="noopener">BKT Lüdenscheid</a> in Kooperation mit dem Unternehmen <a href="https://www.di-soric.com" target="_blank" rel="noopener">di-soric GmbH &amp; Co. KG</a> initiert und wurde von <a href="https://github.com/KochChristian" target="_blank" rel="noopener">Christian Koch</a>, Sebastian Schaffring und <a href="https://github.com/schaeferservices" target="_blank" rel="noopener">Daniel Schäfer</a> umgesetzt.</p><h2 id="Projektziel"><a class="anchor hidden-xs" href="#Projektziel" title="Projektziel"><span class="octicon octicon-link"></span></a>Projektziel</h2><h3 id="Grundsätzliche-Idee"><a class="anchor hidden-xs" href="#Grundsätzliche-Idee" title="Grundsätzliche-Idee"><span class="octicon octicon-link"></span></a>Grundsätzliche Idee</h3><p>Am Anfang und am Ende der Messstrecke befindet sich<br>
+    <div id="doc" class="markdown-body container-fluid comment-enabled" style="position: relative;"><h1 id="Projektdokumentation-Zeitmessung"><a class="anchor hidden-xs" href="#Projektdokumentation-Zeitmessung" title="Projektdokumentation-Zeitmessung"><span class="octicon octicon-link"></span></a>Projektdokumentation: Zeitmessung</h1><h2 id="Einführung"><a class="anchor hidden-xs" href="#Einführung" title="Einführung"><span class="octicon octicon-link"></span></a>Einführung</h2><p>Dieses Projekt wurde von der gymnasialen Oberstufe des <a href="http://www.bkt-luedenscheid.de" target="_blank" rel="noopener">BKT Lüdenscheid</a> in Kooperation mit dem Unternehmen <a href="https://www.di-soric.com" target="_blank" rel="noopener">di-soric GmbH &amp; Co. KG</a> initiert und wurde von <a href="https://github.com/KochChristian" target="_blank" rel="noopener">Christian Koch</a>, Sebastian Schaffring und <a href="https://github.com/schaeferservices" target="_blank" rel="noopener">Daniel Schäfer</a> umgesetzt.</p><p>Kontakt: <a href="mailto:daniel.schaefer.gost61@schueler.bkt-luedenscheid.de" target="_blank" rel="noopener">daniel.schaefer.gost61@schueler.bkt-luedenscheid.de</a></p><h2 id="Projektziel"><a class="anchor hidden-xs" href="#Projektziel" title="Projektziel"><span class="octicon octicon-link"></span></a>Projektziel</h2><h3 id="Grundsätzliche-Idee"><a class="anchor hidden-xs" href="#Grundsätzliche-Idee" title="Grundsätzliche-Idee"><span class="octicon octicon-link"></span></a>Grundsätzliche Idee</h3><p>Am Anfang und am Ende der Messstrecke befindet sich<br>
 jeweils eine Reflexionslichtschranke (grau).<br>
 Am Startpunkt Sensor 1 und am Endpunkt Sensor 2.<br>
 Die Sensoren sind jeweils über eine Leitung mit der Steuerungseinheit (blau) verbunden.<br>
@@ -141,7 +141,7 @@ Um das gesamte System zurückzusetzten, muss der Taster 3 Sekunden (Standardeins
             <ul id="ui-toc" class="ui-toc-dropdown dropdown-menu" aria-labelledby="tocLabel">
                 <div class="toc"><ul class="nav">
 <li class=""><a href="#Projektdokumentation-Zeitmessung" title="Projektdokumentation: Zeitmessung">Projektdokumentation: Zeitmessung</a><ul class="nav">
-<li class=""><a href="#Einführung" title="Einführung">Einführung</a></li>
+<li><a href="#Einführung" title="Einführung">Einführung</a></li>
 <li><a href="#Projektziel" title="Projektziel">Projektziel</a><ul class="nav">
 <li><a href="#Grundsätzliche-Idee" title="Grundsätzliche Idee">Grundsätzliche Idee</a></li>
 <li><a href="#Mechanischer-Aufbau" title="Mechanischer Aufbau">Mechanischer Aufbau</a></li>
@@ -173,7 +173,7 @@ Um das gesamte System zurückzusetzten, muss der Taster 3 Sekunden (Standardeins
     <div id="ui-toc-affix" class="ui-affix-toc ui-toc-dropdown unselectable hidden-print" data-spy="affix" style="top:17px;display:none;"  >
         <div class="toc"><ul class="nav">
 <li class=""><a href="#Projektdokumentation-Zeitmessung" title="Projektdokumentation: Zeitmessung">Projektdokumentation: Zeitmessung</a><ul class="nav">
-<li class=""><a href="#Einführung" title="Einführung">Einführung</a></li>
+<li><a href="#Einführung" title="Einführung">Einführung</a></li>
 <li><a href="#Projektziel" title="Projektziel">Projektziel</a><ul class="nav">
 <li><a href="#Grundsätzliche-Idee" title="Grundsätzliche Idee">Grundsätzliche Idee</a></li>
 <li><a href="#Mechanischer-Aufbau" title="Mechanischer Aufbau">Mechanischer Aufbau</a></li>
